--- a/src/autohide/_toolbar_overlap.scss
+++ b/src/autohide/_toolbar_overlap.scss
@@ -26,20 +26,17 @@
   }
 
   &:hover {
-    @include Option("userChrome.autohide.tabbar", "userChrome.tab.one_liner") {
-      @include Option("userChrome.autohide.tabbar", "userChrome.autohide.navbar") {
+    @include Option("userChrome.autohide.tabbar", "userChrome.autohide.navbar") {
+      @include Option("userChrome.autohide.tabbar", "userChrome.tab.one_liner") {
         --uc-toolbar-height: var(--uc-tabbar-height);
-      }
 
-      @include NotOption("userChrome.autohide.navbar") {
-        @include Option("userChrome.autohide.bookmarkbar") {
-          --uc-toolbar-height: calc(var(--uc-tabbar-height) + var(--uc-bm-height));
+        @include NotOption("userChrome.autohide.navbar") {
+          @include Option("userChrome.autohide.bookmarkbar") {
+            --uc-toolbar-height: calc(var(--uc-tabbar-height) + var(--uc-bm-height));
+          }
         }
-      }
 
-      // OneLinerBeforeResponsive
-      @include NotOption("userChrome.tab.one_liner") {
-        @include Option("userChrome.autohide.navbar") {
+        @include OneLinerNavbar {
           @include NotOption("userChrome.autohide.bookmarkbar") {
             --uc-toolbar-height: calc(var(--uc-tabbar-height) + var(--uc-navbar-height));
           }
@@ -56,8 +53,8 @@
         }
       }
 
-      @include NotOption("userChrome.tab.one_liner") {
-        @include Option("userChrome.autohide.navbar") {
+      @include Option("userChrome.autohide.navbar", "userChrome.tab.one_liner") {
+        @include OneLinerNavbar {
           @include NotOption("userChrome.autohide.bookmarkbar") {
             --uc-toolbar-height: var(--uc-navbar-height);
           }
